--- a/burger.css
+++ b/burger.css
@@ -154,12 +154,7 @@
   h3{
     font-size: 25px;
   }
-  .house{
-    position: static;
-  }
-  .mountain {
-    display: none;
-  }
+ 
   .menu-list {
     width: 100%;
     transform: translateX(-100%);
@@ -206,10 +201,24 @@
     gap: 20px;
   }
 }
-@media (max-width: 992px) {
+@media (max-width: 1100px) {
   .footer__top-wrapper {
     flex-wrap: wrap;
     gap: 50px;
+  }
+  .ofva{
+    margin: 0 10px;
+  }
+  .nature{
+    display: none;
+  }
+  .arc {
+    display: none;
+  }
+  .burger {
+    display: block;
+    top: 0;
+    left: 190px;
   }
   .btn-tur{
     width: 100%;
@@ -228,19 +237,23 @@
     gap: 20px;
   }
   .gallery_img {
-    display: flex;
-    flex-direction: column;
+   overflow: auto;
+  white-space: nowrap;
+
   }
 
- .nature{
-  display: none;
- }
+
   .offer_title {
     font-size: 25px;
   }
   .play{
-    margin-left: 150px;
-    margin-top: -220px;
+    position: absolute;
+   margin-top:-160px;
+   margin-right: 180px;
+}
+.date {
+  flex-wrap: wrap;
+  margin: auto;
 }
   }
 
