--- a/style.css
+++ b/style.css
@@ -2,17 +2,6 @@
   margin: 0px;
   padding: 0px;
 }
-@font-face {
-  font-family: "Nunito Sans";
-  font-style: normal;
-  font-weight: 400;
-  /* Браузер сначала попробует найти шрифт локально */
-  src: local("Nunito Sans"),
-    /* Если не получилось, загрузит woff2 */
-      url("Nunito\ Sans/NunitoSans-Regular") format("woff2"),
-    /* Если браузер не поддерживает woff2, загрузит woff */
-      url("/fonts/roboto.woff") format("woff");
-}
 
 .start {
   background-image: url(./РумТибет.jpg);
@@ -103,6 +92,7 @@ h1 {
 .date {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   border-radius: 10px;
   padding: 40px 42px;
   background: rgba(255, 255, 255, 0.2);
@@ -165,45 +155,73 @@ h1 {
   background: black;
   color: white;
 }
-.programm.tur {
+.img-cont {
   display: flex;
-  justify-content: space-between;
-  padding: 150px 150px;
-  gap: 15px;
-}
-.mountain {
-  position: absolute;
-}
-.house {
-  position: relative;
-  top: 150px;
-  left: 150px;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  padding: 100px 20px;
+
 }
 
-.play {
-  position: absolute;
+.images {
+  position: relative;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
+}
+.cont{
+max-width: 600px;
+}
+.image-back {
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  z-index: 0;
+}
+
+.image-front {
+  position: relative;
+  z-index: 1;
+}
+
+.image img {
+  display: block;
+  width: 300px;
+  border-radius: 16px;
+}
+
+.play-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
   border: none;
   border-radius: 50%;
-  padding: 0;
-  width: 50px;
-  height: 50px;
-  background-color: rgba(253, 253, 253, 0.6);
-  transition: all 0.3s;
-  will-change: transform;
+  width: 60px;
+  height: 60px;
+  font-size: 24px;
   cursor: pointer;
 }
+
+@media (max-width: 900px) {
+  .img-cont{
+      flex-direction: column;
+  }
+}
+
+@media (max-width: 600px) {
+  .image-back {
+      display: none;
+  }
+}
+
 
 .play:hover {
   cursor: pointer;
   transform: scale(1.5);
 }
 .btn-tur {
-  width: 580px;
-  gap: 40px;
   margin-top: 100px;
   padding-left: 20px;
 }
@@ -322,6 +340,7 @@ h6 {
   display: flex;
   justify-content: center;
   gap: 20px;
+  flex-wrap: wrap;
 }
 .img_block img {
   width: 380px;
@@ -493,6 +512,9 @@ a:hover {
   gap: 20px;
   margin: 10px 0;
   cursor: pointer;
+  overflow: auto;
+  white-space: nowrap;
+
 }
 .cntr-btn {
   display: flex;
@@ -504,6 +526,7 @@ a:hover {
 .footer_top.wrapper {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .footer_text {
   margin: 0;
@@ -671,8 +694,8 @@ article {
   position: relative;
 }
 .svg img {
-  width: 26px;
-  height: 26px;
+  width: 100%;
+  height: 100%;
 }
 .svg {
   display: grid;
@@ -687,5 +710,5 @@ article {
 .container {
   margin: 0 auto;
   padding: 0 10px;
-  max-width: 1197px;
+  max-width: 1200px;
 }
