Поправил структуру проекта

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .start {
-  background-image: url(./РумТибет.jpg);
+  background-image: url(./images/РумТибет.jpg);
   background-size: cover;
   width: auto;
   height: auto;
